test/qabort1_2.slq

def main(){
	x:=0:𝔹;
	y:=H(0);
	if x {
		__qabort(𝟙) := y; /// error
		return __qabort(𝔹);
	} else {
		return y;
	}
}
